@@ -102,7 +102,6 @@ namespace XcodeBuilder
 
             if (null != node.RequiredDependents)
             {
-                // no link dependency
                 foreach (var dependency in node.RequiredDependents)
                 {
                     var dependentData = dependency.Data as PBXNativeTarget;
@@ -111,12 +110,53 @@ namespace XcodeBuilder
                         continue;
                     }
 
-                    var targetDependency = project.TargetDependencies.Get(moduleName, dependentData);
+                    if (dependentData.Project == project)
+                    {
+                        // add a real dependency between targets in a project
+                        var targetDependency = project.TargetDependencies.Get(moduleName, dependentData);
 
-                    var containerItemProxy = project.ContainerItemProxies.Get(moduleName, dependentData, project);
-                    targetDependency.TargetProxy = containerItemProxy;
+                        var containerItemProxy = project.ContainerItemProxies.Get(moduleName, dependentData, project);
+                        targetDependency.TargetProxy = containerItemProxy;
 
-                    data.Dependencies.Add(targetDependency);
+                        data.Dependencies.Add(targetDependency);
+                    }
+                    else
+                    {
+                        // add a buildreference to external projects
+                        // Note that this does add a link dependency, but assume dead stripping will resolve this
+                        var type = dependentData.ProductReference.Type;
+                        if (type == PBXFileReference.EType.StaticLibrary)
+                        {
+                            type = PBXFileReference.EType.ReferencedStaticLibrary;
+                        }
+                        if (type == PBXFileReference.EType.DynamicLibrary)
+                        {
+                            type = PBXFileReference.EType.ReferencedDynamicLibrary;
+                        }
+
+                        var relativePath = Opus.Core.RelativePathUtilities.GetPath(dependentData.ProductReference.FullPath, project.RootUri);
+                        var dependentFileRef = project.FileReferences.Get(dependency.UniqueModuleName, type, relativePath, project.RootUri);
+                        var buildFile = project.BuildFiles.Get(dependency.UniqueModuleName, dependentFileRef, frameworksBuildPhase);
+                        if (null == buildFile)
+                        {
+                            throw new Opus.Core.Exception("Build file not available");
+                        }
+                        // make the link requirement optional, so dyld does not attempt to load it with the parent application
+                        buildFile.Settings["ATTRIBUTES"].AddUnique("(Weak, )");
+
+                        project.MainGroup.Children.AddUnique(dependentFileRef);
+
+                        // now add linker search paths
+                        buildConfiguration.Options["LIBRARY_SEARCH_PATHS"].AddUnique("$(inherited)");
+                        if (dependency.Module is C.DynamicLibrary)
+                        {
+                            buildConfiguration.Options["LIBRARY_SEARCH_PATHS"].AddUnique(System.IO.Path.GetDirectoryName(dependency.Module.Options.OutputPaths[C.OutputFileFlags.Executable]));
+                        }
+                        else if (dependency.Module is C.StaticLibrary)
+                        {
+                            buildConfiguration.Options["LIBRARY_SEARCH_PATHS"].AddUnique(System.IO.Path.GetDirectoryName(dependency.Module.Options.OutputPaths[C.OutputFileFlags.StaticLibrary]));
+                        }
+                    }
                 }
             }
 
